# alith

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: addknowledge_ceg.yaml  ci.yaml  image.yaml  node-sdk.yaml  python-sdk.yaml
apps/dat/: README.md  package.json
crates/alith/: Cargo.toml
crates/alith/examples/: agent.rs  agent_claude.rs  agent_deepseek.rs  agent_grok.rs  agent_siliconflow.rs  agent_with_chromadb.rs  agent_with_cot.rs  agent_with_decision.rs  agent_with_dropbox.rs  agent_with_google_drive.rs  agent_with_knowledge.rs  agent_with_lazai.rs  agent_with_lazai_dat.rs  agent_with_lazai_privacy_data.rs  agent_with_llamacpp.rs  agent_with_llamacpp_server.rs  agent_with_marlin_tee.rs  agent_with_mcp.rs  agent_with_memory.rs  agent_with_milvus.rs  agent_with_mistralrs.rs  agent_with_ort.rs  agent_with_pgvector.rs  agent_with_phala_tee.rs  agent_with_pinata_ipfs.rs  agent_with_privacy_data.rs  agent_with_qdrant.rs  agent_with_rag.rs  agent_with_search_tool.rs  agent_with_store.rs  agent_with_tools.rs  chat_template.rs  device.rs  gguf_loader.rs  lazai_data_contribution_and_reward.rs  lazai_settlement.rs  rsa.rs
crates/alith/examples/pgvector_migarations/: 001_setup.sql
crates/alith/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: completion.rs  lib.rs  prelude.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  chat.rs  chunking.rs  embeddings.rs  executor.rs  extractor.rs  flow.rs  llm.rs  mcp.rs  memory.rs  store.rs  task.rs  tool.rs
crates/core/src/chunking/: dfs_chunker.rs  overlap.rs
crates/core/src/llm/: client.rs
crates/data/: Cargo.toml  rsa.md
crates/data/src/: crypto.rs  lib.rs  size.rs  storage.rs  wallet.rs
crates/data/src/storage/: dropbox.rs  google_drive.rs  ipfs.rs
crates/devices/: Cargo.toml
crates/devices/src/: lib.rs  logging.rs
crates/inference/: Cargo.toml  build.rs
crates/inference/src/: errors.rs  lib.rs  serve.rs
crates/inference/src/engines/: llamacpp.rs  mistralrs.rs  mod.rs  ort.rs  python.rs
crates/inference/src/engines/ort/: present.rs
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
crates/interface/src/llms/: mod.rs
crates/interface/src/llms/api/: client.rs
crates/interface/src/llms/api/anthropic/: builder.rs  mod.rs
crates/interface/src/llms/api/anthropic/completion/: req.rs  res.rs
crates/interface/src/llms/api/generic_openai/: mod.rs
crates/interface/src/llms/api/openai/: builder.rs  mod.rs
crates/interface/src/llms/api/openai/completion/: mod.rs  req.rs  res.rs
crates/interface/src/llms/api/perplexity/: builder.rs
crates/interface/src/llms/local/: mod.rs
crates/interface/src/requests/: logit_bias.rs  mod.rs  req_components.rs  res_components.rs
crates/interface/src/requests/completion/: error.rs  request.rs
crates/interface/src/requests/embeddings/: request.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: html.rs  lib.rs  pdf.rs  string.rs  text.rs
crates/lazai/: Cargo.toml
crates/lazai/src/: chain.rs  client.rs  contracts.rs  lib.rs  node.rs  proof.rs
crates/lazai/src/node/: mod.rs  types.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs  tokenizer.rs  tokens.rs
crates/models/src/api_model/: anthropic.rs  openai.rs  perplexity.rs
crates/models/src/local_model/: chat_template.rs  hf_loader.rs  mod.rs
crates/models/src/local_model/gguf/: mod.rs
crates/models/src/local_model/gguf/loaders/: hf.rs  local.rs  preset.rs
crates/models/src/local_model/gguf/preset/: mod.rs
crates/models/src/local_model/gguf/tools/: gguf_tokenizer.rs
crates/models/src/local_model/metadata/: config_json.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: api_prompt.rs  lib.rs  llm_prompt.rs  local_prompt.rs  token_count.rs
crates/store/: Cargo.toml
crates/store/src/: chromadb.rs  lib.rs  milvus.rs  pgvector.rs  qdrant.rs
crates/tee/: Cargo.toml
crates/tee/src/: lib.rs  marlin.rs  phala.rs  secret.rs
crates/tools/: Cargo.toml
integrations/coinbase_agentkit/node/: package.json
integrations/coinbase_agentkit/python/: README.md
integrations/elizaos/: package.json
integrations/elizaos/examples/: elizaos-plugins-within-alith.ts
integrations/elizaos/src/: agent.ts
knowledge/metis/: CEG.json  blog.json  ceg.json
scripts/: addknowledge_CEG.py  addknowledge_blog.py
sdks/node/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  typedoc.json
sdks/node/__test__/: chunking.spec.js  testing.spec.js
sdks/node/examples/: agent.ts  agent_deepseek.ts  agent_grok.ts  agent_twitter.ts  agent_with_async_tool_handlers.ts  agent_with_embeddings.ts  agent_with_extractor.ts  (+20 more)
sdks/python/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
sdks/python/alith/: __init__.py  agent.py  store.py
sdks/python/alith/data/: crypto.py
sdks/python/alith/inference/: __init__.py  server.py  settlement.py
sdks/python/alith/lazai/: __init__.py  chain.py  client.py  contracts.py  proof.py  request.py  settlement.py
sdks/python/alith/lazai/node/: fake.py  validator.py
sdks/python/alith/training/: common.py  params.py  service.py  trainer.py  types.py
sdks/python/examples/: README.md  agent.py  agent_deepseek.py  agent_grok.py  agent_with_extractor.py  agent_with_lazai.py  agent_with_lazai_dat.py  agent_with_lazai_node.py  agent_with_llamacpp.py  agent_with_llamacpp_server.py  agent_with_marlin_tee.py  agent_with_mcp.py  agent_with_memory.py  agent_with_phala_tee.py  agent_with_pinata_ipfs.py  agent_with_privacy_data.py  agent_with_siliconflow.py  agent_with_store.py  agent_with_sturcture_tools.py  agent_with_training_server.py  lazai_add_node.py  lazai_data_contribution_and_reward.py  lazai_data_permission.py  lazai_inference_server_settlement.py  lazai_settlement.py  lazai_settlement_headers.py  rsa_gen.py  search-bot.py  servers_config.json  slack-bot.py  tg-bot-with-rag.py  tg-bot.py  verified_computing_node.py  web3_mcp_server.py
sdks/python/src/: lib.rs  tool.rs
sdks/python/test/data/crypto/: test_crypto.py
sdks/rust/: Cargo.toml  README.md
website/: .gitignore  package.json
(+99 files in other folders)
