[workspace]
members = ["crates/*", "sdks/node", "sdks/rust", "sdks/python"]
default-members = ["crates/alith"]
resolver = "2"

[workspace.dependencies]
alith = { path = "crates/alith" }
alith-core = { path = "crates/core" }
alith-knowledge = { path = "crates/knowledge" }
alith-data = { path = "crates/data" }
alith-store = { path = "crates/store" }
alith-inference = { path = "crates/inference" }
alith-tools = { path = "crates/tools" }
alith-client = { path = "crates/client" }
alith-devices = { path = "crates/devices" }
alith-models = { path = "crates/models" }
alith-prompt = { path = "crates/prompt" }
alith-interface = { path = "crates/interface" }
alith-tee = { path = "crates/tee" }

fastembed = { version = "4.8.0", default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
] }
rand = "0.9"
# rand 8 for secp256k1
rand_08 = { package = "rand", version = "0.8" }
rand_core = "0.9.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
schemars = "0.8.22"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }
url = "2.5.4"
dagrs = "0.4.4"
serial_test = "3.1.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
half = "2.6.0"
colorful = "0.3.2"
dotenvy = "0.15.7"
indenter = "0.3.3"
hex = "0.4.3"
bon = "3.6.3"
bytes = "1.10.1"
bytesize = "2.0.1"
chrono = "0.4.41"
either = "1.15.0"
async-stream = "0.3.6"
encoding_rs = "0.8.35"
indexmap = "2.9"
indoc = "2.0.6"
linkify = "0.10.0"
regex = "1.11"
hnsw_rs = "0.3.1"
mcp-client = "0.1.0"
html2text = "0.15.0"
rayon = "1.10.0"
unicode-properties = "0.1.3"
unicode-segmentation = "1.11.0"
text-splitter = { version = "0.26.0", features = ["markdown", "tiktoken-rs"] }
rsa = "0.9.8"
sequoia-openpgp = "2.0.0"
sysinfo = { version = "0.35.1", default-features = false, features = [
    "system",
] }
backoff = { version = "0.4.0", features = ["tokio"] }
secrecy = "0.10.3"
lopdf = "0.36.0"
readability = { version = "0.3.0", default-features = false }
html_to_markdown = "0.1.0"
hex-literal = "1.0.0"
base64 = "0.22.1"
sha2 = "0.10.9"
scraper = "0.23.1"

# SQL and Store Deps
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
] }

# Alloy Deps
alloy = { version = "1.0.1", default-features = false, features = [
    "signers",
    "signer-local",
    "reqwest-rustls-tls",
] }

# Server Deps
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-graceful = "0.2.2"
tokio-stream = { version = "0.1.15", default-features = false, features = [
    "sync",
] }
hyper = { version = "1.6.0", features = ["full"] }
hyperlocal = "0.9.1"
hyper-util = { version = "0.1.11", features = ["server-auto", "client-legacy"] }
futures = { version = "0.3", features = ["alloc", "std", "async-await"] }
futures-util = "0.3.29"
http = "1.1.0"
http-body-util = "0.1.3"

# Model Deps
tiktoken-rs = "0.6.0"
hf-hub = { version = "0.4.2", default-features = false, features = [
    "ureq",
    "tokio",
    "rustls-tls",
] }
byteorder = "1.5.0"
minijinja = "2.10.2"
paste = "1.0.15"
tokenizers = "0.21.1"
sentencepiece = "0.11.3"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.86"
exclude = [".github/"]
homepage = "https://alith.lazai.network"
license = "Apache-2.0"
repository = "https://github.com/0xLazAI/alith"
authors = ["LazAI Labs Authors", "Shelby Jenkins"]
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
rpath = true
panic = "unwind"
