[package]
name = "alith"
description = "Alith AI Framework"
edition.workspace = true
homepage.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["ai", "agent", "data", "model"]

[dependencies]
alith-core.workspace = true
alith-knowledge.workspace = true
alith-store.workspace = true
alith-inference.workspace = true
alith-tools.workspace = true
alith-client.workspace = true
alith-models.workspace = true
alith-interface.workspace = true
alith-prompt.workspace = true
alith-devices.workspace = true
alith-tee = { workspace = true, optional = true }

async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
schemars.workspace = true
reqwest.workspace = true
url.workspace = true

rand = "0.9"

[features]
# Default features
default = []

# Inference features
inference = ["alith-core/inference"]
ort = ["alith-inference/ort"]
llamacpp = ["alith-inference/llamacpp"]
mistralrs = ["alith-inference/mistralrs"]
python = ["alith-inference/python"]
sglang = ["alith-inference/sglang"]
trtllm = ["alith-inference/trtllm"]
vllm = ["alith-inference/vllm"]
tee = ["dep:alith-tee"]

# Store features
qdrant = ["alith-store/qdrant"]
pgvector = ["alith-store/pgvector"]
milvus = ["alith-store/milvus"]

[[example]]
name = "agent"

[[example]]
name = "agent_deepseek"

[[example]]
name = "agent_siliconflow"

[[example]]
name = "agent_grok"

[[example]]
name = "agent_claude"

[[example]]
name = "agent_with_tools"

[[example]]
name = "agent_with_mcp"

[[example]]
name = "agent_with_extractor"

[[example]]
name = "agent_with_search_tool"

[[example]]
name = "agent_with_store"

[[example]]
name = "agent_with_knowledge"

[[example]]
name = "agent_with_memory"

[[example]]
name = "agent_with_embeddings"

[[example]]
name = "agent_with_rag"

[[example]]
name = "agent_with_pgvector"
required-features = ["pgvector"]

[[example]]
name = "agent_with_qdrant"
required-features = ["qdrant"]

[[example]]
name = "agent_with_milvus"
required-features = ["milvus"]

[[example]]
name = "agent_with_cot"

[[example]]
name = "agent_with_decision"

[[example]]
name = "agent_with_llamacpp"
required-features = ["llamacpp"]

[[example]]
name = "agent_with_mistralrs"
required-features = ["mistralrs"]

[[example]]
name = "agent_with_ort"
required-features = ["ort"]

[[example]]
name = "agent_with_llamacpp_server"
required-features = ["llamacpp"]

[[example]]
name = "hf_loader"

[[example]]
name = "gguf_loader"

[[example]]
name = "chat_template"

[[example]]
name = "tokenizer"

[[example]]
name = "device"
