[package]
description = "The Backend for the alith-client Crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "alith-interface"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
alith-devices.workspace = true
alith-models.workspace = true
alith-prompt.workspace = true

anyhow.workspace = true
colorful.workspace = true
dotenvy.workspace = true
indenter.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

backoff.workspace = true
bytes.workspace = true
secrecy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[features]
default = []

[dev-dependencies]
serial_test.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }

[build-dependencies]
cargo_metadata = "0.19.2"
alith-devices.workspace = true
