[package]
description = "Load and Download LLM Models, Metadata, and Tokenizers"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "alith-models"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
alith-prompt.workspace = true
anyhow.workspace = true
colorful.workspace = true
dotenvy.workspace = true
indenter.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
half.workspace = true
tiktoken-rs.workspace = true

hf-hub.workspace = true
byteorder.workspace = true
minijinja.workspace = true
paste.workspace = true
tokenizers.workspace = true
sentencepiece = { workspace = true, optional = true }

[features]
default = []

sentencepiece = ["dep:sentencepiece"]
