[package]
name = "alith-store"
description = "Alith store package"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
alith-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Qdrant
qdrant-client = { version = "1.14.0", optional = true }

# PGVector
pgvector = { version = "0.4.0", features = ["sqlx"], optional = true }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
], optional = true }
uuid = { version = "1.11.0", features = ["v4", "serde"], optional = true }

[features]
qdrant = ["dep:qdrant-client"]
pgvector = ["dep:pgvector", "dep:sqlx", "dep:uuid"]
