[package]
name = "alith-tee"
description = "Alith TEE package"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
alith-core.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

aes-gcm = "0.10.3"
rand = "0.9.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
hex = "0.4.3"
rand_core = "0.9.3"
either = "1.15.0"

# Phala Dependencies
hex-literal = { version = "1.0.0", optional = true }
base64 = { version = "0.22.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
hyper = { version = "1.6.0", optional = true }
hyperlocal = { version = "0.9.1", optional = true }
hyper-util = { version = "0.1.11", optional = true }
http-body-util = { version = "0.1.3", optional = true }

[features]
aws-tee = []
azure-tee = []
marlin = []
phala = [
    "dep:hex-literal",
    "dep:base64",
    "dep:sha2",
    "dep:hyper",
    "dep:hyperlocal",
    "dep:hyper-util",
    "dep:http-body-util",
]

sha-asm = ["sha2/asm"]
