[package]
name = "alith-tee"
description = "Alith TEE package"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
alith-core.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
either.workspace = true

# Phala Dependencies
hex-literal = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyperlocal = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }

[features]
aws-tee = []
azure-tee = []
marlin = []
phala = [
    "dep:hex-literal",
    "dep:base64",
    "dep:sha2",
    "dep:hyper",
    "dep:hyperlocal",
    "dep:hyper-util",
    "dep:http-body-util",
]
sha-asm = ["sha2/asm"]
