[package]
name = "alith-python-sdk"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
alith.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.23.0", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23.0", default-features = false, features = [
  "tokio-runtime",
] }
