[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "alith"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "Alith Python SDK"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic",
    "requests",
    "web3<7.0.0,>=6.18.0",
    "rsa",
    "python-gnupg",
    "aiohttp",
    "flask",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "alith._alith"
python-source = "."

[tool.ruff.lint]
ignore = ["F403", "F405"]
